@@ -948,6 +948,7 @@ org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.From-source-descript
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Increment-by = Increment by
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Select-features-on-only-one-layer = Select features on only one layer
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Selected-features-only = Selected features only
+org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-and-destination-atributes-must-be-different = Source and destination attributes must be different !
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-attribute = Source attribute
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Target-attribute = Target attribute
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.Blend-LineStrings = Blend Lines
