@@ -937,6 +937,7 @@ org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.From-source-descript
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Increment-by=Incremento de
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Selected-features-only=Solamente elementos seleccionados
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Select-features-on-only-one-layer=Seleccionar elementos solamente en una capa
+#T:org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-and-destination-atributes-must-be-different = Source and destination attributes must be different !
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-attribute=Atributo origen
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Target-attribute=Atributo de destino
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.A-new-layer-will-be-created-for-the-results=Esto crea un nuevo nivel con los resultados
