@@ -945,6 +945,7 @@ org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Description = Liit\u
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Increment-by = Lis\u00E4ysaskel
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Select-features-on-only-one-layer = Valitse kohteita vain yhdelt\u00E4 tasolta
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Selected-features-only = Vain valitut kohteet
+#T:org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-and-destination-atributes-must-be-different = Source and destination attributes must be different !
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-attribute = L\u00E4hteen\u00E4 oleva ominaisuustieto
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Target-attribute = Kohteena oleva ominaisuustieto
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.Blend-LineStrings = Sulauta viivat
