@@ -945,6 +945,7 @@ org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.From-source-descript
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Increment-by = Incr\u00E9menter d'un pas de
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Select-features-on-only-one-layer = Retient les objets s\u00E9lectionn\u00E9s d'une seule couche
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Selected-features-only = Uniquement les objets s\u00E9lectionn\u00E9s de la couche
+org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-and-destination-atributes-must-be-different = Les attributs source et destination doivent \u00EAtre diff\u00E9rents !
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-attribute = Attribut source
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Target-attribute = Attribute cible
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.Blend-LineStrings = Fusionner les lignes
