@@ -945,6 +945,7 @@ org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Description = \u00c9
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Increment-by = N\u00f6vel\u00e9s adott \u00e9rt\u00e9kkel
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Select-features-on-only-one-layer = Elemek kiv\u00e1laszt\u00e1sa csak egy r\u00e9tegen
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Selected-features-only = Csak a kiv\u00e1lasztott elemek
+#T:org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-and-destination-atributes-must-be-different = Source and destination attributes must be different !
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-attribute = Forr\u00e1s attrib\u00fatum
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Target-attribute = C\u00e9l attrib\u00fatum
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.Blend-LineStrings = Vonalak egyes\u00edt\u00e9se
