@@ -937,6 +937,7 @@ org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.From-source-descript
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Increment-by=Incrementa di
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Selected-features-only=Solo elementi selezionati
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Select-features-on-only-one-layer=Seleziona elementi solo su un livello
+#T:org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-and-destination-atributes-must-be-different = Source and destination attributes must be different !
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-attribute=Attributo origine
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Target-attribute=Attributo destinazione
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.A-new-layer-will-be-created-for-the-results=Verr\u00E0 crearo un nuovo livello per i risultati
