@@ -945,6 +945,7 @@ org.openjump.core.ui.plugin.style.ImportSLDPlugIn.name = SLD \u0d38\u0d4d\u0d31\
 #T:org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Increment-by = Increment by
 #T:org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Select-features-on-only-one-layer = Select features on only one layer
 #T:org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Selected-features-only = Selected features only
+#T:org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-and-destination-atributes-must-be-different = Source and destination attributes must be different !
 #T:org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-attribute = Source attribute
 #T:org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Target-attribute = Target attribute
 #T:org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.Blend-LineStrings = Blend Lines
