@@ -935,6 +935,7 @@ org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Destination-attribut
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Increment-by = \u0b85\u0ba4\u0bbf\u0b95\u0bb0\u0bbf\u0baa\u0bcd\u0baa\u0bc1
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Select-features-on-only-one-layer = \u0b92\u0bb0\u0bc7 \u0b92\u0bb0\u0bc1 \u0b85\u0b9f\u0bc1\u0b95\u0bcd\u0b95\u0bc1 \u0b85\u0bae\u0bcd\u0b9a\u0b99\u0bcd\u0b95\u0bb3\u0bcd \u0ba4\u0bc7\u0bb0\u0bcd\u0ba8\u0bcd\u0ba4\u0bc6\u0b9f\u0bc1\u0b95\u0bcd\u0b95\u0bb5\u0bc1\u0bae\u0bcd
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Selected-features-only = \u0ba4\u0bc7\u0bb0\u0bcd\u0ba8\u0bcd\u0ba4\u0bc6\u0b9f\u0bc1\u0ba4\u0bcd\u0ba4 \u0b85\u0bae\u0bcd\u0b9a\u0b99\u0bcd\u0b95\u0bb3\u0bcd  \u0bae\u0b9f\u0bcd\u0b9f\u0bc1\u0bae\u0bc7
+#T:org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-and-destination-atributes-must-be-different = Source and destination attributes must be different !
 org.openjump.core.ui.plugin.tools.AutoAssignAttributePlugIn.Source-attribute = \u0bae\u0bc2\u0bb2  \u0baa\u0ba3\u0bcd\u0baa\u0bc1\u0b95\u0bcd\u0b95\u0bc2\u0bb1\u0bc1
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.Blend-LineStrings = \u0b95\u0bb2\u0baa\u0bcd\u0baa\u0bc1  \u0b95\u0bc7\u0bbe\u0b9f\u0bc1\u0b95\u0bb3\u0bcd
 org.openjump.core.ui.plugin.tools.BlendLineStringsPlugIn.New = \u0baa\u0bc1\u0ba4\u0bbf\u0baf
